Bug 134791 - UI: Options dialog window is too small in width and height, cuts off fields but is not scrollable
Summary: UI: Options dialog window is too small in width and height, cuts off fields b...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.0.0.1 rc
Hardware: All Windows (All)
: medium normal
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: target:25.2.0 target:25.8.0 target:25...
Keywords: bibisected, bisected, regression
: 133058 134139 144312 162532 164809 165078 165894 (view as bug list)
Depends on:
Blocks: Options-Dialog
  Show dependency treegraph
 
Reported: 2020-07-14 06:39 UTC by Thomas Lendo
Modified: 2025-03-27 06:19 UTC (History)
14 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of Options > LibreOfficeDev > User Data (47.52 KB, image/jpeg)
2020-07-31 17:44 UTC, Thomas Lendo
Details
Screenshot of Options > LibreOfficeDev > User Data (60.80 KB, image/jpeg)
2020-07-31 17:48 UTC, Thomas Lendo
Details
Screenshots with marked issues (158.75 KB, application/pdf)
2020-08-06 14:01 UTC, Thomas Lendo
Details
Options dialog with cut text/textbox parts (LibO 7.5.0.2) (77.70 KB, application/pdf)
2023-03-13 12:04 UTC, Thomas Lendo
Details
makro (163.26 KB, image/jpeg)
2024-08-13 06:43 UTC, Łukasz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Lendo 2020-07-14 06:39:33 UTC
The Options dialog window is too small in width and height.

This results in (for example)
* cut form fields e.g. in Options > LibreOffice > User Data
* cut cryptography description of checkbox in German language in the same window
* not visible button "Windows Default apps" in Options > LibreOffice > General
* cut options in Options > Language Settings > Hungarian Sentence Checking at the bottom
* cut option descriptions on the right end in Options > Language Settings > Grammar Checking (Portuguese)
* cut buttons on the right in Options > Internet > MediaWiki
* cut description text of first checkbox Options > LibreOffice > Barrierefreiheit (English: Accessibility) in German language



Tested with

Version: 7.0.0.1 (x64)
Build ID: 04ba7e3f1e51af6c5d653e543a620e36719083fd
CPU-Threads: 12; BS: Windows 10.0 Build 18363; UI-Render: Skia/Vulkan; VCL: win
Locale: de-AT (de_AT); UI: de-DE
Calc: threaded

and

Version: 7.1.0.0.alpha0+ (x64)
Build ID: ffe503b62f9a508285ed06ef977f91604130579a
CPU threads: 12; OS: Windows 10.0 Build 18363; UI render: Skia/Vulkan; VCL: win
Locale: de-AT (de_AT); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2020-07-30 11:09:07 UTC Comment hidden (obsolete)
Comment 2 Thomas Lendo 2020-07-31 17:44:54 UTC
Created attachment 163828 [details]
Screenshot of Options > LibreOfficeDev > User Data

Version: 7.1.0.0.alpha0+ (x64)
Build ID: <buildversion>
CPU threads: 12; OS: Windows 10.0 Build 18363; UI render: Skia/Vulkan; VCL: win
Locale: de-AT (de_AT); UI: en-US
Calc: threaded

with a daily master build downloaded at 2020-07-27
Comment 3 Thomas Lendo 2020-07-31 17:48:29 UTC
Created attachment 163829 [details]
Screenshot of Options > LibreOfficeDev > User Data

This is the right screenshot.
Comment 4 Thomas Lendo 2020-08-04 20:57:43 UTC
(In reply to Thomas Lendo from comment #0)
> * not visible button "Windows Default apps" in Options > LibreOffice >
> General
This is also mentioned in Bug 133590 - UI: 'Windows Default apps' button on Options -> General panel is cut off
Comment 5 Thomas Lendo 2020-08-06 14:00:17 UTC
Still there (not on Linux) with

Version: 7.1.0.0.alpha0+ (x64)
Build ID: <daily master build msi from yesterday>
CPU threads: 12; OS: Windows 10.0 Build 18363; UI render: Skia/Vulkan; VCL: win
Locale: de-AT (de_AT); UI: en-US
Calc: threaded

and

Version: 7.0.0.3 (x64)
Build ID: 8061b3e9204bef6b321a21033174034a5e2ea88e
CPU-Threads: 12; BS: Windows 10.0 Build 18363; UI-Render: Skia/Vulkan; VCL: win
Locale: de-AT (de_AT); UI: de-DE
Calc: threaded
Comment 6 Thomas Lendo 2020-08-06 14:01:08 UTC
Created attachment 164004 [details]
Screenshots with marked issues
Comment 7 Thomas Lendo 2020-09-01 15:32:51 UTC
Still there with build from today.

Version: 7.1.0.0.alpha0+ (x64)
Build ID: fb8334aa79e811bb6780e072e24d2580932f1031
CPU threads: 12; OS: Windows 10.0 Build 18363; UI render: Skia/Vulkan; VCL: win
Locale: de-AT (de_AT); UI: de-DE

I'm the only one who has this Windows issue?
Comment 8 Dennis Roczek 2020-09-02 08:02:15 UTC
Hi Thomas,

no, I can confirm. The problem is that you can resize (make the window bigger) the window and then see everything correctly.

Best regards,

Dennis
Comment 9 raal 2020-09-02 16:31:36 UTC
bisected to 67b328864627239441231dcef0efe9ea834d3d51 is the first bad commit
commit 67b328864627239441231dcef0efe9ea834d3d51
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Mon Nov 25 23:31:28 2019 -0800

    source ec93706a9eea072e25f5caad47505cb5293e7071

83124 :Options - User Data Dialog labels left align

Adding CC to: Andreas Kainz
Comment 10 andreas_k 2020-09-02 20:13:03 UTC Comment hidden (obsolete)
Comment 11 Timur 2020-09-04 09:39:22 UTC Comment hidden (obsolete)
Comment 12 Thomas Lendo 2020-09-04 20:23:51 UTC Comment hidden (obsolete)
Comment 13 andreas_k 2020-09-04 20:34:20 UTC Comment hidden (obsolete)
Comment 14 Thomas Lendo 2020-09-04 22:08:26 UTC
(In reply to andreas_k from comment #13)
> (In reply to Thomas Lendo from comment #12)
> > Why not making the options dialog for Windows wider and taller as it is now?
> The dialog is resizable on windows, gtk3 and qt I tested it with 7.0 and
> master.
The default UI should look good and no user should resize dialogs by its own in order to be able to see all settings or to avoid ugliness.
Comment 15 Xisco Faulí 2020-09-17 18:13:25 UTC
*** Bug 133058 has been marked as a duplicate of this bug. ***
Comment 16 Xisco Faulí 2020-09-18 08:29:45 UTC Comment hidden (obsolete)
Comment 17 Xisco Faulí 2020-09-18 08:31:31 UTC
(In reply to Xisco Faulí from comment #16)
> (In reply to Timur from comment #11)
> > Xisco, can you try revert and see if Bug 134407 is the same?
> 
> Reverted in https://gerrit.libreoffice.org/c/core/+/102941

but not sure it's related, the patch only touches the user data dialog
Comment 18 Xisco Faulí 2020-09-18 11:16:39 UTC
(In reply to andreas_k from comment #10)
> we can reverte the patch, but I don't think that it fix the bug.

Yes, I've just checked it and the issue is not fixed after reverting the patch, sigh
Comment 19 Timur 2021-09-06 08:36:34 UTC
*** Bug 144312 has been marked as a duplicate of this bug. ***
Comment 20 Heiko Tietze 2022-08-24 08:04:42 UTC
*** Bug 148207 has been marked as a duplicate of this bug. ***
Comment 21 Heiko Tietze 2022-08-24 08:11:24 UTC
Cannot confirm the issue on Linux. The checkbox "[ ] User data for document properties" is left-aligned with the label above, controls don't extend beyond the right margin, the accessibility option has "Restart required" appendix. And ultimately the dialog is resizable (although it shouldn't if we follow the HIG).

Please check again.

Version: 7.4.0.3 / LibreOffice Community
Build ID: 40(Build:3)
CPU threads: 8; OS: Linux 5.19; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (en_US.UTF-8); UI: de-DE
7.4.0-2
Calc: threaded
Comment 22 Łukasz 2022-08-24 08:31:39 UTC
pleasse screen
Comment 23 QA Administrators 2023-02-21 03:22:11 UTC Comment hidden (obsolete)
Comment 24 Thomas Lendo 2023-03-13 12:04:19 UTC
Created attachment 185927 [details]
Options dialog with cut text/textbox parts (LibO 7.5.0.2)

Still there with new user profile in Windows
in Options dialog
in German and English (USA):
- User Data
- Hungarian Sentence Checking
- Grammar Checking (Portuguese)
- MediaWiki

Version: 7.5.0.2 (X86_64) / LibreOffice Community
Build ID: c0dd1bc3f1a385d110b88e26ece634da94921f58
CPU threads: 12; OS: Windows 10.0 Build 19045; UI render: Skia/Vulkan; VCL: win
Comment 25 Commit Notification 2024-08-12 06:22:32 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/058f1d1b5246a9d57942541bef144143b0302383

tdf#134791 Let options dialog determine its own size based on tab pages

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 26 Łukasz 2024-08-13 06:43:21 UTC
Created attachment 195814 [details]
makro

I checked version 25.2, it's good, but in one place it's like in the screenshot.
Comment 27 Commit Notification 2024-08-15 06:49:34 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ac73760cc545e69704ddbee59be84351f1c3fa13

tdf#134791 Back to fixed size, but increase it a bit

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 28 Łukasz 2024-08-15 06:53:26 UTC
If I find anything else, I'll write and post a screenshot
Comment 29 Gabor Kelemen (Collabora) 2024-09-05 14:36:39 UTC
*** Bug 134139 has been marked as a duplicate of this bug. ***
Comment 30 Gabor Kelemen (Collabora) 2024-09-05 15:01:56 UTC
*** Bug 162532 has been marked as a duplicate of this bug. ***
Comment 31 V Stuart Foote 2025-02-06 16:20:13 UTC
*** Bug 164809 has been marked as a duplicate of this bug. ***
Comment 32 V Stuart Foote 2025-02-06 16:21:05 UTC
*** Bug 165078 has been marked as a duplicate of this bug. ***
Comment 33 V Stuart Foote 2025-02-06 16:22:01 UTC
Complaints comming in with 25.2.0.3 release, may need additional effort...
Comment 34 Commit Notification 2025-03-03 15:18:41 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c60ca3582598c7b9b9b33c288edbd76207f5b14d

tdf#134791 Clamp options dialog height to 80% of screen size

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 35 Commit Notification 2025-03-06 10:07:10 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/91477bc82259bb98a92280061e70d777a963acf5

tdf#134791 Clamp options dialog height to 80% of screen size

It will be available in 25.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 36 V Stuart Foote 2025-03-25 14:21:12 UTC
*** Bug 165894 has been marked as a duplicate of this bug. ***