tdf#134791 Let options dialog determine its own size based on tab pages

Instead of forcing some random size on it, which leads to widgets being cut off.

Change-Id: I4acd350b380988a2ae7bb091241daa985025b5ce
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171662
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>